# stm32-cmake-vscode-ws

./: .gitignore  CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
